# flappybirdsfml

./: .gitignore  CMakeLists.txt  DeathScene.cpp  DeathScene.hpp  MainScene.cpp  MainScene.hpp  RetryScene.cpp  RetryScene.hpp  bird.cpp  bird.hpp  collision.cpp  collision.hpp  globals.hpp  main.cpp  pipe.cpp  pipe.hpp  pipesManager.cpp  pipesManager.hpp  scenes.hpp
